examples/test/testpolicy19329.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19329
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key18: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value32
          key44: value19
      podSelector:
        matchLabels:
          key31: value32
          key2: value4
          key32: value27
